stack.yml
AWSTemplateFormatVersion: 2010-09-09

Description: AWS CloudFormation Template for the To-do app

Parameters:
  EnvironmentParameter: 
    Type: String
    Default: production

  AvailabilityZoneParameter: 
    Type: AWS::EC2::AvailabilityZone::Name
    Default: eu-central-1a

  ImageParameter: 
    Type: AWS::EC2::Image::Id
    Default: ami-00a205cb8e06c3c4e

  InstanceTypeParameter: 
    Type: String
    Default: t2.micro
    AllowedValues: 
      - t2.micro

  KeyPairNameParameter: 
    Type: AWS::EC2::KeyPair::KeyName
    Default: ec2-user

  VolumeSizeParameter: 
    Type: Number
    Default: 8
    AllowedValues: 
      - 8
      - 16
  
Resources:
  Vpc:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.0.0.0/16
      EnableDnsSupport: true
      EnableDnsHostnames: true

  InternetGateway:
    Type: AWS::EC2::InternetGateway

  VpcGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref Vpc
      InternetGatewayId: !Ref InternetGateway

  Subnet:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref Vpc
      AvailabilityZone: !Ref AvailabilityZoneParameter
      CidrBlock: 10.0.0.0/24
      MapPublicIpOnLaunch: true

  RouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref Vpc

  SubnetRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref RouteTable
      SubnetId: !Ref Subnet

  Route:
    Type: AWS::EC2::Route
    DependsOn: InternetGateway
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway
      RouteTableId: !Ref RouteTable

  SshSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      VpcId: !Ref Vpc
      GroupDescription: Enable SSH access via port 22
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0

  FeSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      VpcId: !Ref Vpc
      GroupDescription: Enable access to the FE via port 80
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0

  ApiSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      VpcId: !Ref Vpc
      GroupDescription: Enable access to the API via port 3000
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 3000
          ToPort: 3000
          CidrIp: 0.0.0.0/0

  MongoExpressSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      VpcId: !Ref Vpc
      GroupDescription: Enable access to Mongo Express via port 8081
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 8081
          ToPort: 8081
          CidrIp: 0.0.0.0/0

  MongoSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      VpcId: !Ref Vpc
      GroupDescription: Enable access to MongoDB via port 27017
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 27017
          ToPort: 27017
          CidrIp: 0.0.0.0/0

  NetworkInterface:
    Type: AWS::EC2::NetworkInterface
    Properties:
      SubnetId: !Ref Subnet
      GroupSet: 
        - !Ref SshSecurityGroup
        - !Ref FeSecurityGroup
        - !Ref ApiSecurityGroup
        - !Ref MongoExpressSecurityGroup
        - !Ref MongoSecurityGroup
      SourceDestCheck: true

  ElasticIp:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc

  EIPAssociation:
    Type: AWS::EC2::EIPAssociation
    Properties:
      NetworkInterfaceId: !Ref NetworkInterface
      AllocationId: !GetAtt ElasticIp.AllocationId

  Role: 
    Type: AWS::IAM::Role
    Properties: 
      AssumeRolePolicyDocument: 
        Version: 2012-10-17
        Statement: 
        - Effect: Allow
          Principal: 
            Service: ec2.amazonaws.com
          Action: sts:AssumeRole
      Path: /

  Policy: 
    Type: AWS::IAM::Policy
    Properties: 
      PolicyName: role-to-do-app
      PolicyDocument: 
        Version: 2012-10-17
        Statement: 
          - Effect: Allow
            Action:
              - logs:CreateLogGroup
              - logs:CreateLogStream
              - logs:PutLogEvents
            Resource: "*"
      Roles:
        - !Ref Role

  InstanceProfile: 
    Type: AWS::IAM::InstanceProfile
    Properties: 
      Path: /
      Roles:
        - !Ref Role

  ToDoApp:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: !Ref ImageParameter
      InstanceType: !Ref InstanceTypeParameter
      KeyName: !Ref KeyPairNameParameter
      BlockDeviceMappings:
        - DeviceName: /dev/xvda
          Ebs:
            VolumeSize: !Ref VolumeSizeParameter
      NetworkInterfaces:
        - NetworkInterfaceId: !Ref NetworkInterface
          DeviceIndex: 0
      IamInstanceProfile: !Ref InstanceProfile
      UserData:
        Fn::Base64: !Sub |
          #!/bin/bash -xe
          /opt/aws/bin/cfn-init -v --configsets default --region ${AWS::Region} --stack ${AWS::StackName} --resource ToDoApp
          /opt/aws/bin/cfn-signal -e $? --region ${AWS::Region} --stack ${AWS::StackName} --resource ToDoApp
    Metadata: 
      AWS::CloudFormation::Init: 
        configSets:
          default:
            - update-packages
            - install-docker
            - install-docker-compose
            - install-github-runner
        update-packages: 
          commands:
            0-update-packages: 
              command: sudo yum update -y
        install-docker: 
          commands:
            0-install-docker: 
              command: sudo amazon-linux-extras install docker -y
            1-start-docker-service: 
              command: sudo service docker start
            2-add-user-to-docker-group: 
              command: sudo usermod -a -G docker ec2-user
        install-docker-compose: 
          commands:
            0-download-docker-compose: 
              command: sudo curl -L "https://github.com/docker/compose/releases/download/1.27.4/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
            1-change-executable-permissions:
              command: sudo chmod +x /usr/local/bin/docker-compose
            2-create-symbolic-link:
              command: sudo ln -s /usr/local/bin/docker-compose /usr/bin/docker-compose
        install-github-runner:
          commands:
            0-create-runner-directory:
              command: !Sub mkdir ${EnvironmentParameter}-actions-runner
            1-download-runner:
              command: curl -O -L https://github.com/actions/runner/releases/download/v2.273.5/actions-runner-linux-x64-2.273.5.tar.gz
              cwd: !Sub ${EnvironmentParameter}-actions-runner
            2-extract-runner:
              command: tar xzf ./actions-runner-linux-x64-2.273.5.tar.gz
              cwd: !Sub ${EnvironmentParameter}-actions-runner
            3-configure-runner:
              command: !Sub >- 
                ./config.sh
                --unattended
                --url https://github.com/to-do-app
                --token AGBMI2ZTVLQ2GFHIBRJ2SPK7SMDDQ
                --name ${EnvironmentParameter}
                --labels ${EnvironmentParameter}
              env: 
                RUNNER_ALLOW_RUNASROOT: 1
              cwd: !Sub ${EnvironmentParameter}-actions-runner
            # 4-install-runner-service:
            #   command: sudo ./svc.sh install
            # 5-start-runner-service:
            #   command: sudo ./svc.sh start
